@@ -296,6 +296,7 @@
 #define STRING_CMD_INFO_UNTIL        "Until"
 #define STRING_CMD_INFO_MODIFICATION "Modification"
 #define STRING_CMD_INFO_MODIFIED     "Last modified"
+#define STRING_CMD_INFO_VIRTUAL_TAGS "Virtual tags"
 #define STRING_CMD_UNDO_USAGE        "Reverts the most recent change to a task"
 #define STRING_CMD_UNDO_MODS         "The undo command does not allow further task modification."
 #define STRING_CMD_STATS_USAGE       "Shows task database statistics"
